[metadata]
name = Lespy
version = attr: lespy.__version__
author = Natan Santos
author_email = natansantosapps@gmail.com
description = A small and robust micro Python framework for building simple and solid web apps.
long_description = file: README.md, LICENSE
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://github.com/natanfeitosa/lespy/
    Tracker = https://github.com/natanfeitosa/lespy/issues/

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8

[options.package_data]
* = *.md, *.rst

[options.extras_require]
test = 
    pytest
    coverage

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tests*
